[package]
name = "simple_bar"
version = "0.1.3"
authors = ['HeyCarl']
edition = "2021"
license = "MIT"
description = "Bare minimal crate that displays a progress bar in the terminal"
readme = "README.md"
repository = "https://github.com/sauronevillord/simple-bar"
categories = ["command-line-interface"]
keywords = ["cli", "progress", "bar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
